fix: gradient border, hero button alignment, hero alignment

--- a/app/styles.module.scss
+++ b/app/styles.module.scss
@@ -45,7 +45,6 @@
 }
 
 .blockBackdrop {
-	border: 1px solid;
 	background: radial-gradient(
 		90.16% 143.01% at 15.32% 21.04%,
 		rgba(239, 231, 42, 0.2) 0%,
@@ -54,6 +53,20 @@
 	);
 	background-blend-mode: overlay, normal;
 	backdrop-filter: blur(40px);
+
+	&::before {
+		content: "";
+		position: absolute;
+		inset: 0;
+		border-radius: 50px; 
+		padding: 2px;
+		background: radial-gradient(80.69% 208.78% at 108.28% 112.58%, #C4D312 0%, rgba(255, 255, 255, 0) 100%), radial-gradient(80.38% 222.5% at -13.75% -12.36%, #98F9FF 0%, rgba(255, 255, 255, 0) 100%);
+		-webkit-mask: 
+			linear-gradient(#fff 0 0) content-box, 
+			linear-gradient(#fff 0 0);
+		-webkit-mask-composite: xor;
+						mask-composite: exclude;
+	}
 }
 
 .customshadow {
